deployment/kubernetes/vm/app/guide/guide-server.yaml
#
# Copyright 2018-2019 The Everest Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#
# How to Test: kubectl exec -it $(kubectl get pod -l app=ratings -o jsonpath='{.items[0].metadata.name}') -c ratings -- curl http://fs.everest-app:9000/fibo?n=3
#
#
##################################################################################################
# Guide remote service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: guide
  labels:
    app: guide
    service: guide
spec:
  ports:
  - port: 9999
    name: grpc
  selector:
    app: guide
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guide-v1
  labels:
    app: guide
    version: v1
spec:
  selector:
    matchLabels:
        app: guide
        version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: guide
        version: v1
        status: normal
    spec:
      containers:
      - name: guide
        image: iharijono/guide:latest
        # command: [ "/bin/sh", "-c", "--" ]
        # args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   name: guide-v2
#   labels:
#     app: guide
#     version: v2
# spec:
#   replicas: 2
#   template:
#     metadata:
#       labels:
#         app: guide
#         version: v2
#     spec:
#       containers:
#       - name: guide
#         image: iharijono/guide:latest
#         command: [ "/bin/sh", "-c", "--" ]
#         args: [ "while true; do sleep 30; done;" ]
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 9999
#         # env:
#         # - name: EVEREST_GUIDE_VERBOSE
#         #   value: "true"
#         # - name: EVEREST_GUIDE_PORT
#         #   value: "9999"
#         # - name: EVEREST_GUIDE_MAX_COL_ROW
#         #   value: 64
# ---
